# landit-ai

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  checklist.md  context-notes.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy-dev-worker.yml  deploy-prod-worker.yml  proofops-verify.yml
app/: __init__.py  main.py
app/api/: __init__.py  conversation.py  health.py
app/common/: __init__.py  errors.py  exception_handlers.py  response.py
app/conversation/: __init__.py
app/conversation/application/: __init__.py  next_message_service.py
app/core/: __init__.py  config.py  logging.py  observability.py  openai_client.py  sentry.py
app/models/: __init__.py  conversation.py
docs/: architecture.md  development.md
docs/api/: conversation.md
docs/quality/: lan-138-evaluation.md
docs/superpowers/plans/: 2026-06-28-ai-server-initial-setup.md  2026-06-28-openrouter-settings.md  2026-07-08-lan-95-next-message-api.md  2026-07-08-lan-96-closing-message-api.md  2026-07-08-lan-97-message-feedback-api.md  (+5 more)
scripts/: evaluate_conversation_quality.py
tests/: test_app.py  test_conversation_api.py  test_dockerfile.py  test_logging.py  test_observability.py  test_quality_evaluation.py
tests/fixtures/: lan_138_quality_cases.json  lan_166_scoring_cases.json  lan_167_feedback_quality_cases.json  lan_169_inner_thought_quality_cases.json  lan_175_feedback_session_case.json  lan_180_feedback_quality_cases.json  lan_182_feedback_quality_cases.json
(+14 files in other folders)
