[project]
name = "landit-ai"
version = "0.1.0"
description = "FastAPI based AI server for Landit."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0,<1.0.0",
    "openai>=1.0.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-http>=1.43.0,<2.0.0",
    "opentelemetry-instrumentation-fastapi>=0.64b0,<1.0.0",
    "opentelemetry-instrumentation-system-metrics>=0.64b0,<1.0.0",
    "opentelemetry-sdk>=1.43.0,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "sentry-sdk>=2.0.0,<3.0.0",
    "uvicorn>=0.30.0,<1.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
